# simpalt

./: Cargo.nix  Cargo.toml  README.md  build.rs  flake.nix  simpalt.nu  simpalt.zsh  simpalt.zsh-theme  update_version.sh
.cargo/: config.toml
.github/res/: demo.cast
.github/workflows/: audit.yml  build.yml  release.yml
loader/: simpalt.nu  simpalt.zsh
loaders/: simpalt.nu  simpalt.zsh  simpalt.zsh-theme
src/: args.rs  compatibility.rs  git.rs  long.rs  main.rs  short.rs  symbol.rs  tmux.rs
src/command/: help.rs  mod.rs  right.rs  tmux.rs  version.rs
src/command/left/: direnv.rs  long.rs  mod.rs  short.rs
src/compat/: mod.rs  win.rs  zsh.rs
src/git/: long.rs  short.rs
