[package]
name = "simpalt"
version = "0.3.9"
edition = "2024"

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.42", default-features = false, features = [
  "clock",
  "std",
] }
flate2 = "1.1.2"
git2 = "0.20.2"
simd-json = { version = "0.16.0", default-features = false, features = [
  "swar-number-parsing",
  "runtime-detection",
] }

[dev-dependencies]
regex = "1.11.3"
