[package]
name = "simpalt"
version = "0.3.11"
edition = "2024"

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.44", default-features = false, features = [
  "clock",
  "std",
] }
flate2 = "1.1.9"
git2 = "0.20.4"
simd-json = { version = "0.17.0", default-features = false, features = [
  "swar-number-parsing",
  "runtime-detection",
] }

[dev-dependencies]
regex = "1.12.3"
